# serializer version: 1
# name: test_all_entities
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'switch.pool_climate_mode_for_heating',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Climate mode for heating',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Climate mode for heating',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'clima_onoff',
      'unique_id': '1234567890_mbf_par_clima_onoff',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'switch.pool_enable_cover_reduction_when_covered',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Enable cover reduction (when covered)',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Enable cover reduction (when covered)',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'hidro_cover_enable',
      'unique_id': '1234567890_mbf_par_hidro_cover_enable',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'switch.pool_enable_hydrolysis_shutdown_on_high_temperature',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Enable hydrolysis shutdown on high temperature',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Enable hydrolysis shutdown on high temperature',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'hidro_temp_shutdown',
      'unique_id': '1234567890_mbf_par_hidro_temp_shutdown',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': None,
      'entity_id': 'switch.pool_manual_filtration',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Manual Filtration',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Manual Filtration',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'filt_manual_state',
      'unique_id': '1234567890_mbf_par_filt_manual_state',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': None,
      'entity_id': 'switch.pool_relay_aux1',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux1',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Relay Aux1',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'aux1',
      'unique_id': '1234567890_aux1',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': None,
      'entity_id': 'switch.pool_relay_aux2',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux2',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Relay Aux2',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'aux2',
      'unique_id': '1234567890_aux2',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': None,
      'entity_id': 'switch.pool_relay_aux3',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux3',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Relay Aux3',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'aux3',
      'unique_id': '1234567890_aux3',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': None,
      'entity_id': 'switch.pool_relay_aux4',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux4',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Relay Aux4',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'aux4',
      'unique_id': '1234567890_aux4',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'switch.pool_smart_antifreeze',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Smart antifreeze',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Smart antifreeze',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'smart_anti_freeze',
      'unique_id': '1234567890_mbf_par_smart_anti_freeze',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'switch.pool_time_auto_sync',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Time Auto Sync',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Time Auto Sync',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'time_auto_sync',
      'unique_id': '1234567890_time_auto_sync',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'switch.pool_uv_mode',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'UV Mode',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'UV Mode',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'uv_mode',
      'unique_id': '1234567890_mbf_par_uv_mode',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'switch.pool_winter_mode',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Winter Mode',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Winter Mode',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'winter_mode',
      'unique_id': '1234567890_winter_mode',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_setup_when_modules_absent
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': None,
      'entity_id': 'switch.pool_manual_filtration',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Manual Filtration',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Manual Filtration',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'filt_manual_state',
      'unique_id': '1234567890_mbf_par_filt_manual_state',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': None,
      'entity_id': 'switch.pool_relay_aux1',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux1',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Relay Aux1',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'aux1',
      'unique_id': '1234567890_aux1',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': None,
      'entity_id': 'switch.pool_relay_aux2',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux2',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Relay Aux2',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'aux2',
      'unique_id': '1234567890_aux2',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': None,
      'entity_id': 'switch.pool_relay_aux3',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux3',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Relay Aux3',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'aux3',
      'unique_id': '1234567890_aux3',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': None,
      'entity_id': 'switch.pool_relay_aux4',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux4',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Relay Aux4',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'aux4',
      'unique_id': '1234567890_aux4',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'switch.pool_time_auto_sync',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Time Auto Sync',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Time Auto Sync',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'time_auto_sync',
      'unique_id': '1234567890_time_auto_sync',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'switch.pool_winter_mode',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Winter Mode',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Winter Mode',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'winter_mode',
      'unique_id': '1234567890_winter_mode',
      'unit_of_measurement': None,
    }),
  ])
# ---
